DigicielFull/force-app/main/default/objects/Contract/fields/Actual_Billed_Date_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Actual_Billed_Date_Opportunity__c</fullName>
    <formula>Opportunity__r.Actual_Billed_Date__c</formula>
    <label>Actual Billed Date (Opportunity)</label>
    <type>Date</type>
</CustomField>