DigicielFull/force-app/main/default/objects/Contract/fields/Address_Line_1_Formula__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_1_Formula__c</fullName>
    <businessOwnerGroup>SFDC_Admin_Team</businessOwnerGroup>
    <formula>Account.Street_1__c</formula>
    <inlineHelpText>This field lookups up to the customers account address</inlineHelpText>
    <label>Address Line 1</label>
    <type>Text</type>
</CustomField>