DigicielFull/force-app/main/default/objects/Contract/fields/CapexAmountRequired__c.field-meta.xml
<CustomField>
    <fullName>CapexAmountRequired__c</fullName>
    <label>Capex Amount Required</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>