DigicielFull/force-app/main/default/objects/Contract/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>To be provided</fullName>
            </value>
            <value>
                <fullName>Roseau</fullName>
            </value>
            <value>
                <fullName>Portsmouth</fullName>
            </value>
            <value>
                <fullName>Canefield</fullName>
            </value>
            <value>
                <fullName>Marigot</fullName>
            </value>
            <value>
                <fullName>Salisbury</fullName>
            </value>
            <value>
                <fullName>Berricoa</fullName>
            </value>
            <value>
                <fullName>Mahaut</fullName>
            </value>
            <value>
                <fullName>Saint Joseph</fullName>
            </value>
            <value>
                <fullName>Pointe Michel</fullName>
            </value>
            <value>
                <fullName>Massacre</fullName>
            </value>
            <value>
                <fullName>Bisée</fullName>
            </value>
            <value>
                <fullName>Castries</fullName>
            </value>
            <value>
                <fullName>Vieux Fort</fullName>
            </value>
            <value>
                <fullName>Micoud</fullName>
            </value>
            <value>
                <fullName>Soufrière</fullName>
            </value>
            <value>
                <fullName>Dennery</fullName>
            </value>
            <value>
                <fullName>Gros Islet</fullName>
            </value>
            <value>
                <fullName>Anse La Raye</fullName>
            </value>
            <value>
                <fullName>Laborie</fullName>
            </value>
            <value>
                <fullName>Canaries</fullName>
            </value>
            <value>
                <fullName>Cap Estate</fullName>
            </value>
            <value>
                <fullName>Choiseul</fullName>
            </value>
            <value>
                <fullName>Panama City</fullName>
            </value>
            <value>
                <fullName>San Miguelito</fullName>
            </value>
            <value>
                <fullName>Tocumen</fullName>
            </value>
            <value>
                <fullName>David</fullName>
            </value>
            <value>
                <fullName>Arraiján</fullName>
            </value>
            <value>
                <fullName>Colón</fullName>
            </value>
            <value>
                <fullName>Las Cumbres</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>