DigicielFull/force-app/main/default/objects/Contract/fields/City_Formula__c.field-meta.xml
<CustomField>
    <fullName>City_Formula__c</fullName>
    <formula>Text(Account.City2__c)</formula>
    <label>City</label>
    <type>Text</type>
</CustomField>