DigicielFull/force-app/main/default/objects/Contract/fields/CompletedServiceRequest__c.field-meta.xml
<CustomField>
    <fullName>CompletedServiceRequest__c</fullName>
    <label># completed service request</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>