DigicielFull/force-app/main/default/objects/Contract/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <description>Tim Tobin&apos;s Power of One - https://success.salesforce.com/0D53000001GwrJW</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>