DigicielFull/force-app/main/default/objects/Contract/fields/Contract_Key__c.field-meta.xml
<CustomField>
    <fullName>Contract_Key__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Key</label>
    <type>Text</type>
</CustomField>