DigicielFull/force-app/main/default/objects/Contract/fields/Contract_Term_Years__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term_Years__c</fullName>
    <label>Contract Term (Years)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 Year</fullName>
            </value>
            <value>
                <fullName>2 Years</fullName>
            </value>
            <value>
                <fullName>3 Years</fullName>
            </value>
            <value>
                <fullName>4 Years</fullName>
            </value>
            <value>
                <fullName>5 Years</fullName>
            </value>
            <value>
                <fullName>6 Years</fullName>
            </value>
            <value>
                <fullName>7 Years</fullName>
            </value>
            <value>
                <fullName>8 Years</fullName>
            </value>
            <value>
                <fullName>9 Years</fullName>
            </value>
            <value>
                <fullName>10 Years</fullName>
            </value>
            <value>
                <fullName>15 Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>