DigicielFull/force-app/main/default/objects/Contract/fields/Contract_Value_formula__c.field-meta.xml
<CustomField>
    <fullName>Contract_Value_formula__c</fullName>
    <formula>Subscription_Fee__c  *  ContractTerm</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Value (formula)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>