DigicielFull/force-app/main/default/objects/Contract/fields/ContractCompletionPercent__c.field-meta.xml
<CustomField>
    <fullName>ContractCompletionPercent__c</fullName>
    <formula>(InstalledServiceRequestNumber__c / TotalServiceRequestNumber__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Installation</inlineHelpText>
    <label>% contract completion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>