DigicielFull/force-app/main/default/objects/Contract/fields/ContractPriceIncreaseClause__c.field-meta.xml
<CustomField>
    <fullName>ContractPriceIncreaseClause__c</fullName>
    <inlineHelpText>Does the contract have a clause which allows u to increase the pricing for the customer</inlineHelpText>
    <label>Contract Price Increase Clause</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>