DigicielFull/force-app/main/default/objects/Contract/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Anguilla</fullName>
            </value>
            <value>
                <fullName>Antigua And Barbuda</fullName>
            </value>
            <value>
                <fullName>Aruba</fullName>
            </value>
            <value>
                <fullName>Barbados</fullName>
            </value>
            <value>
                <fullName>Bermuda</fullName>
            </value>
            <value>
                <fullName>Cambodia</fullName>
            </value>
            <value>
                <fullName>Cameroon</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>Cape Verde</fullName>
            </value>
            <value>
                <fullName>Cayman Islands</fullName>
            </value>
            <value>
                <fullName>Central African Republic</fullName>
            </value>
            <value>
                <fullName>Chad</fullName>
            </value>
            <value>
                <fullName>Chile</fullName>
            </value>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>Christmas Island</fullName>
            </value>
            <value>
                <fullName>Cocos (keeling) Islands</fullName>
            </value>
            <value>
                <fullName>Colombia</fullName>
            </value>
            <value>
                <fullName>Comoros</fullName>
            </value>
            <value>
                <fullName>Congo</fullName>
            </value>
            <value>
                <fullName>Congo, The Democratic Republic Of The</fullName>
            </value>
            <value>
                <fullName>Cook Islands</fullName>
            </value>
            <value>
                <fullName>Costa Rica</fullName>
            </value>
            <value>
                <fullName>CÔte D&apos;ivoire</fullName>
            </value>
            <value>
                <fullName>Croatia</fullName>
            </value>
            <value>
                <fullName>Cuba</fullName>
            </value>
            <value>
                <fullName>Curacao</fullName>
            </value>
            <value>
                <fullName>Cyprus</fullName>
            </value>
            <value>
                <fullName>Czech Republic</fullName>
            </value>
            <value>
                <fullName>Denmark</fullName>
            </value>
            <value>
                <fullName>Djibouti</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>