DigicielFull/force-app/main/default/objects/Contract/fields/Country_Formula__c.field-meta.xml
<CustomField>
    <fullName>Country_Formula__c</fullName>
    <businessOwnerGroup>SFDC_Admin_Team</businessOwnerGroup>
    <formula>TEXT( Account.Billing_Country__c )</formula>
    <inlineHelpText>This field lookups up to the customers account address</inlineHelpText>
    <label>Country</label>
    <type>Text</type>
</CustomField>