DigicielFull/force-app/main/default/objects/Contract/fields/Customer_Technical_Contact__c.field-meta.xml
<CustomField>
    <fullName>Customer_Technical_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Technical Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <filterItems>
            <field>Contact.PNG_Type__c</field>
            <operation>equals</operation>
            <value>Technical - External, Technical - Internal, IT Manager</value>
        </filterItems>
        <filterItems>
            <field>Contact.No_Longer_with_Company__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts (Customer Technical Contact)</relationshipLabel>
    <relationshipName>Contracts2</relationshipName>
    <type>Lookup</type>
</CustomField>