DigicielFull/force-app/main/default/objects/Contract/fields/ElapsedTime__c.field-meta.xml
<CustomField>
    <fullName>ElapsedTime__c</fullName>
    <formula>TODAY() - DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Elapsed time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>