DigicielFull/force-app/main/default/objects/Contract/fields/File_Location__c.field-meta.xml
<CustomField>
    <fullName>File_Location__c</fullName>
    <label>File Location</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>