DigicielFull/force-app/main/default/objects/Contract/fields/InstalledMRC__c.field-meta.xml
<CustomField>
    <fullName>InstalledMRC__c</fullName>
    <label>Installed MRC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>