DigicielFull/force-app/main/default/objects/Contract/fields/InstalledOTC__c.field-meta.xml
<CustomField>
    <fullName>InstalledOTC__c</fullName>
    <label>Installed OTC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>