DigicielFull/force-app/main/default/objects/Contract/fields/InstalledServiceRequestNumber__c.field-meta.xml
<CustomField>
    <fullName>InstalledServiceRequestNumber__c</fullName>
    <defaultValue>0</defaultValue>
    <label># installed service request</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>