DigicielFull/force-app/main/default/objects/Contract/fields/InstalledServiceRequestTotalAmount__c.field-meta.xml
<CustomField>
    <fullName>InstalledServiceRequestTotalAmount__c</fullName>
    <label>SR Total MRC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>