DigicielFull/force-app/main/default/objects/Contract/fields/KeyIssuesRedFlags__c.field-meta.xml
<CustomField>
    <fullName>KeyIssuesRedFlags__c</fullName>
    <label>Key Issues/ Red Flags</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>