DigicielFull/force-app/main/default/objects/Contract/fields/MRC__c.field-meta.xml
<CustomField>
    <fullName>MRC__c</fullName>
    <formula>IF( RecordType.Name = &quot;Digicel PNG ICT&quot;,  Opportunity__r.Total_Monthly_Recurring_Revenue__c ,Opportunity__r.MRC__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract MRC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>