DigicielFull/force-app/main/default/objects/Contract/fields/NetAOPIntallationOTC__c.field-meta.xml
<CustomField>
    <fullName>NetAOPIntallationOTC__c</fullName>
    <formula>Opportunity__r.Net_AOP_Installation_OTC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net AOP Intallation OTC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>