DigicielFull/force-app/main/default/objects/Contract/fields/OPEX_USD__c.field-meta.xml
<CustomField>
    <fullName>OPEX_USD__c</fullName>
    <formula>(( PNG_OfferedMbps__c  *  PNG_Utilization_Rate__c )* PNG_Price_per_MB__c) * 
( USD_to_PGK_Exchange_Rate__c *  ContractTerm ) + 
(PNG_TCV__c *  PNG_Sales_Commission__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OPEX (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>