DigicielFull/force-app/main/default/objects/Contract/fields/OpportunityID__c.field-meta.xml
<CustomField>
    <fullName>OpportunityID__c</fullName>
    <description>This with Conga query to pull out quoteLineItems</description>
    <formula>CASESAFEID(Opportunity__r.Id)</formula>
    <label>OpportunityID</label>
    <type>Text</type>
</CustomField>