DigicielFull/force-app/main/default/objects/Contract/fields/OTC__c.field-meta.xml
<CustomField>
    <fullName>OTC__c</fullName>
    <formula>IF( RecordType.Name = &quot;Digicel PNG ICT&quot;, Opportunity__r.Amount + Opportunity__r.Setup_Fees__c ,Opportunity__r.OTC__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract OTC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>