DigicielFull/force-app/main/default/objects/Contract/fields/OverallCompletionTime__c.field-meta.xml
<CustomField>
    <fullName>OverallCompletionTime__c</fullName>
    <formula>DATEVALUE(ActivatedDate )  -   DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Délai écoulé entre la création et la complétion totale du contrat</inlineHelpText>
    <label>Overall completion time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>