DigicielFull/force-app/main/default/objects/Contract/fields/Parish_Region_Department__c.field-meta.xml
<CustomField>
    <fullName>Parish_Region_Department__c</fullName>
    <label>Parish / Region / Department</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Clarendon</fullName>
            </value>
            <value>
                <fullName>Hanover</fullName>
            </value>
            <value>
                <fullName>Kingston</fullName>
            </value>
            <value>
                <fullName>Manchester</fullName>
            </value>
            <value>
                <fullName>Portland</fullName>
            </value>
            <value>
                <fullName>Saint Andrew</fullName>
            </value>
            <value>
                <fullName>Saint Ann</fullName>
            </value>
            <value>
                <fullName>Saint Catherine</fullName>
            </value>
            <value>
                <fullName>Saint Elizabeth</fullName>
            </value>
            <value>
                <fullName>Saint James</fullName>
            </value>
            <value>
                <fullName>Saint Mary</fullName>
            </value>
            <value>
                <fullName>Saint Thomas</fullName>
            </value>
            <value>
                <fullName>Trelawny</fullName>
            </value>
            <value>
                <fullName>Westmoreland</fullName>
            </value>
            <value>
                <fullName>Barima - Waini</fullName>
            </value>
            <value>
                <fullName>Pomeroon - Supenaam</fullName>
            </value>
            <value>
                <fullName>Essequibo Islands - West Demerara</fullName>
            </value>
            <value>
                <fullName>Demerara Mahaica</fullName>
            </value>
            <value>
                <fullName>Mahaica - Mahaicony</fullName>
            </value>
            <value>
                <fullName>East Berbice - Corentyne</fullName>
            </value>
            <value>
                <fullName>Cuyuni - Mazaruni</fullName>
            </value>
            <value>
                <fullName>Potaro - Siparuni</fullName>
            </value>
            <value>
                <fullName>Upper Takutu - Upper Essequibo</fullName>
            </value>
            <value>
                <fullName>Upper Demerara - Berbice</fullName>
            </value>
            <value>
                <fullName>Brokopondo</fullName>
            </value>
            <value>
                <fullName>Commewijne</fullName>
            </value>
            <value>
                <fullName>Coronie</fullName>
            </value>
            <value>
                <fullName>Marowijne</fullName>
            </value>
            <value>
                <fullName>Nickerie</fullName>
            </value>
            <value>
                <fullName>Para</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>