DigicielFull/force-app/main/default/objects/Contract/fields/Parish_Region_Department_Formula__c.field-meta.xml
<CustomField>
    <fullName>Parish_Region_Department_Formula__c</fullName>
    <businessOwnerGroup>SFDC_Admin_Team</businessOwnerGroup>
    <formula>TEXT( Account.Parish__c )</formula>
    <inlineHelpText>This field lookups up to the customers account address</inlineHelpText>
    <label>Parish / Region / Department</label>
    <type>Text</type>
</CustomField>