DigicielFull/force-app/main/default/objects/Contract/fields/PNG_Active__c.field-meta.xml
<CustomField>
    <fullName>PNG_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>