DigicielFull/force-app/main/default/objects/Contract/fields/PNG_Case__c.field-meta.xml
<CustomField>
    <fullName>PNG_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>