DigicielFull/force-app/main/default/objects/Contract/fields/PNG_Contract_Name__c.field-meta.xml
<CustomField>
    <fullName>PNG_Contract_Name__c</fullName>
    <formula>Account.Name +&apos; : &apos;+ContractNumber + &apos; : &apos;+ TEXT(Contract_Type__c)  + &apos; : &apos;+ TEXT(DAY(DATEVALUE(CreatedDate)) )+ &apos;-&apos;+ TEXT(MONTH( DATEVALUE(CreatedDate)) )+&apos;-&apos;+  TEXT(YEAR(DATEVALUE(CreatedDate)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Name</label>
    <type>Text</type>
</CustomField>