DigicielFull/force-app/main/default/objects/Contract/fields/PNG_ExistingMRR__c.field-meta.xml
<CustomField>
    <fullName>PNG_ExistingMRR__c</fullName>
    <formula>Opportunity__r.PNG_ExistingMRR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Existing MRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>