DigicielFull/force-app/main/default/objects/Contract/fields/PNG_IsOpportunityClosed__c.field-meta.xml
<CustomField>
    <fullName>PNG_IsOpportunityClosed__c</fullName>
    <formula>Opportunity__r.IsClosed</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Opportunity Closed?</label>
    <type>Checkbox</type>
</CustomField>