DigicielFull/force-app/main/default/objects/Contract/fields/PNG_Margin__c.field-meta.xml
<CustomField>
    <fullName>PNG_Margin__c</fullName>
    <formula>IF(PNG_TCV__c!=0,PNG_TCM__c /  PNG_TCV__c,0)</formula>
    <label>% Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>