DigicielFull/force-app/main/default/objects/Contract/fields/PNG_MRRCAPEXPaybackPeriodYrs__c.field-meta.xml
<CustomField>
    <fullName>PNG_MRRCAPEXPaybackPeriodYrs__c</fullName>
    <formula>Opportunity__r.PNG_MRRCAPEXPaybackPeriodYrs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CAPEX Payback Period – Yrs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>