DigicielFull/force-app/main/default/objects/Contract/fields/PNG_MRRFlag1__c.field-meta.xml
<CustomField>
    <fullName>PNG_MRRFlag1__c</fullName>
    <formula>Opportunity__r.PNG_MRRFlag__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MRR Flag</label>
    <type>Checkbox</type>
</CustomField>