DigicielFull/force-app/main/default/objects/Contract/fields/PNG_NRR__c.field-meta.xml
<CustomField>
    <fullName>PNG_NRR__c</fullName>
    <formula>Opportunity__r.PNG_NRR__c</formula>
    <label>NRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>