DigicielFull/force-app/main/default/objects/Contract/fields/PNG_OfferedMbps__c.field-meta.xml
<CustomField>
    <fullName>PNG_OfferedMbps__c</fullName>
    <formula>Opportunity__r.PNG_OfferedMbps__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offered Mbps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>