DigicielFull/force-app/main/default/objects/Contract/fields/PNG_OpportunityName__c.field-meta.xml
<CustomField>
    <fullName>PNG_OpportunityName__c</fullName>
    <formula>Opportunity__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Name</label>
    <type>Text</type>
</CustomField>