DigicielFull/force-app/main/default/objects/Contract/fields/PNG_OptionalSigner__c.field-meta.xml
<CustomField>
    <fullName>PNG_OptionalSigner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Optional Signer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts (Optional Signer)</relationshipLabel>
    <relationshipName>Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>