DigicielFull/force-app/main/default/objects/Contract/fields/PNG_Price_per_MB__c.field-meta.xml
<CustomField>
    <fullName>PNG_Price_per_MB__c</fullName>
    <defaultValue>(175)</defaultValue>
    <label>Price per MB</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>