DigicielFull/force-app/main/default/objects/Contract/fields/PNG_Quote__c.field-meta.xml
<CustomField>
    <fullName>PNG_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>PNG_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>