DigicielFull/force-app/main/default/objects/Contract/fields/PNG_ReminderEscalationSent__c.field-meta.xml
<CustomField>
    <fullName>PNG_ReminderEscalationSent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reminder/Escalation Sent</label>
    <type>Checkbox</type>
</CustomField>