DigicielFull/force-app/main/default/objects/Contract/fields/PNG_ServiceType__c.field-meta.xml
<CustomField>
    <fullName>PNG_ServiceType__c</fullName>
    <formula>TEXT(Opportunity__r.PNG_OpportunityType__c)</formula>
    <label>Service Type</label>
    <type>Text</type>
</CustomField>