DigicielFull/force-app/main/default/objects/Contract/fields/PNG_SpecialContractTerms__c.field-meta.xml
<CustomField>
    <fullName>PNG_SpecialContractTerms__c</fullName>
    <label>PNG Special Contract Terms</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>