DigicielFull/force-app/main/default/objects/Contract/fields/PNG_Step1InitiatedDateTime__c.field-meta.xml
<CustomField>
    <fullName>PNG_Step1InitiatedDateTime__c</fullName>
    <label>Step 1 Initiated Date/Time</label>
    <type>DateTime</type>
</CustomField>