DigicielFull/force-app/main/default/objects/Contract/fields/PNG_Step2InitiatedDateTime__c.field-meta.xml
<CustomField>
    <fullName>PNG_Step2InitiatedDateTime__c</fullName>
    <label>Step 2 Initiated Date/Time</label>
    <type>DateTime</type>
</CustomField>