DigicielFull/force-app/main/default/objects/Contract/fields/PNG_TCM__c.field-meta.xml
<CustomField>
    <fullName>PNG_TCM__c</fullName>
    <formula>PNG_TCV__c - PNG_OPEX__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TCM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>