DigicielFull/force-app/main/default/objects/Contract/fields/PNG_TCV__c.field-meta.xml
<CustomField>
    <fullName>PNG_TCV__c</fullName>
    <formula>( PNG_NewMRR__c *  ContractTerm ) +  PNG_NRR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TCV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>