DigicielFull/force-app/main/default/objects/Contract/fields/PNG_Ts_Cs_Changed__c.field-meta.xml
<CustomField>
    <fullName>PNG_Ts_Cs_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ts &amp; Cs Changed</label>
    <type>Checkbox</type>
</CustomField>