DigicielFull/force-app/main/default/objects/Contract/fields/PNG_Type__c.field-meta.xml
<CustomField>
    <fullName>PNG_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Voice &amp; Data</fullName>
            </value>
            <value>
                <fullName>Cloud Telephony</fullName>
            </value>
            <value>
                <fullName>Corporate Internet</fullName>
            </value>
            <value>
                <fullName>Digicel Fixed Voice</fullName>
            </value>
            <value>
                <fullName>Hosted PBX</fullName>
            </value>
            <value>
                <fullName>Private Network</fullName>
            </value>
            <value>
                <fullName>VSAT</fullName>
            </value>
            <value>
                <fullName>Business Managed Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>