DigicielFull/force-app/main/default/objects/Contract/fields/PVSignedDate__c.field-meta.xml
<CustomField>
    <fullName>PVSignedDate__c</fullName>
    <label>PV Signed Date</label>
    <type>Date</type>
</CustomField>