DigicielFull/force-app/main/default/objects/Contract/fields/Service_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Order_Type__c</fullName>
    <label>Service Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Private Network Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>