DigicielFull/force-app/main/default/objects/Contract/fields/ServiceLevelAgreement__c.field-meta.xml
<CustomField>
    <fullName>ServiceLevelAgreement__c</fullName>
    <label>Service Level Agreement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>