DigicielFull/force-app/main/default/objects/Contract/fields/ServiceRequestTotalAmount__c.field-meta.xml
<CustomField>
    <fullName>ServiceRequestTotalAmount__c</fullName>
    <label>SR Total OTC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>