DigicielFull/force-app/main/default/objects/Contract/fields/Share_Point_Location__c.field-meta.xml
<CustomField>
    <fullName>Share_Point_Location__c</fullName>
    <label>Share Point Location</label>
    <type>Url</type>
</CustomField>