DigicielFull/force-app/main/default/objects/Contract/fields/Shared_Link_on_Accellion__c.field-meta.xml
<CustomField>
    <fullName>Shared_Link_on_Accellion__c</fullName>
    <label>Shared Link on Accellion</label>
    <type>Url</type>
</CustomField>