DigicielFull/force-app/main/default/objects/Contract/fields/Smartnet_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Smartnet_Contract_Number__c</fullName>
    <label>Smartnet Contract Number</label>
    <length>24</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>