DigicielFull/force-app/main/default/objects/Contract/fields/SRCompletion__c.field-meta.xml
<CustomField>
    <fullName>SRCompletion__c</fullName>
    <formula>CompletedServiceRequest__c /  TotalServiceRequestNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% SR completion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>