DigicielFull/force-app/main/default/objects/Contract/fields/StatusPV__c.field-meta.xml
<CustomField>
    <fullName>StatusPV__c</fullName>
    <label>PV Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reviewed</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Signed</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>